[gd_scene load_steps=6 format=3 uid="uid://chme11eyldqed"]

[ext_resource type="Script" path="res://Scripts/beacon_node_item_slot.gd" id="1_m757t"]
[ext_resource type="Texture2D" uid="uid://c677ek62vngtq" path="res://assets/beacon/node-bg-slot.png" id="2_6lq0p"]
[ext_resource type="Script" path="res://Scripts/drag_destination_control.gd" id="3_mto6c"]

[sub_resource type="CanvasTexture" id="CanvasTexture_4injw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_efw5d"]
size = Vector2(41.5, 39.5)

[node name="BeaconNodeItemSlot" type="Area2D"]
script = ExtResource("1_m757t")

[node name="BackgroundTextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_6lq0p")
expand_mode = 3

[node name="ItemTextureRect" type="TextureRect" parent="."]
z_index = 1
offset_left = 4.0
offset_top = 3.0
offset_right = 38.0
offset_bottom = 37.0
texture = SubResource("CanvasTexture_4injw")
expand_mode = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(22.25, 20.25)
shape = SubResource("RectangleShape2D_efw5d")

[node name="DragDestinationControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_mto6c")
